--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ edition = "2018"
 
 [dependencies]
 read-process-memory = "^0.1"
-sysinfo = "^0.14"
 rodio = "^0.11"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+sysinfo = "^0.14"
