--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "^0.7"
 read-process-memory = "^0.1"
 rodio = "^0.11"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 sysinfo = "^0.14"
+
+[profile.release]
+lto = true
